# rs-agent

./: .gitignore  pyproject.toml  requirements.txt
src/websummarizeragent/: __init__.py  crew.py  main.py
src/websummarizeragent/config/: agents.yaml  tasks.yaml
