[project]
name = "websummarizeragent"
version = "0.1.0"
description = "Web summarizer agent with Stripe payment integration"
authors = [{ name = "Noah Cashin", email = "noahc959@icloud.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.14.1",
    "crewai-tools>=0.0.14",
    "stripe>=7.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "google-generativeai>=0.8.3",
    "chromadb>=0.5.23",
    "langchain-groq>=0.2.2",
    "langchain-google-genai>=2.0.7",
    "firecrawl-py>=0.1.0",
]

[project.scripts]
websummarizeragent = "websummarizeragent.main:run"
run_crew = "websummarizeragent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/websummarizeragent"]

[tool.hatch.build]
include = [
    "src/websummarizeragent/**/*.py",
    "src/websummarizeragent/**/*.yaml",
    "lambda_function.py"
]
